[gd_scene load_steps=2 format=3 uid="uid://bqsslulh23vyl"]

[ext_resource type="Script" path="res://src/scenes/geneX.gd" id="1_rct23"]

[node name="GeneX" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_rct23")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -15.5
offset_right = 49.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 28

[node name="LoadBIN" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Extract from PFW3 archive."
text = "Extract .BIN"

[node name="LoadDAT" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Extract from PFW3 archive."
text = "Extract .DAT / .TX / .PKF"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = 44.0
offset_right = 139.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2

[node name="decompButton" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Output Decompressed Files (Debug)"

[node name="tim2out" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Output Original TM2 Files"

[node name="GENELoadBIN" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open File(s)"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.BIN")
use_native_dialog = true

[node name="GENELoadDAT" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.DAT, *.TX, *.PKF")
use_native_dialog = true

[node name="GENELoadFOLDER" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a Directory"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[connection signal="pressed" from="HBoxContainer/LoadBIN" to="." method="_on_load_bin_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadDAT" to="." method="_on_load_dat_pressed"]
[connection signal="toggled" from="VBoxContainer/decompButton" to="." method="_on_decomp_button_toggled"]
[connection signal="toggled" from="VBoxContainer/tim2out" to="." method="_on_tim_2_out_toggled"]
[connection signal="files_selected" from="GENELoadBIN" to="." method="_on_gene_load_bin_files_selected"]
[connection signal="file_selected" from="GENELoadDAT" to="." method="_on_gene_load_dat_file_selected"]
[connection signal="dir_selected" from="GENELoadFOLDER" to="." method="_on_gene_load_folder_dir_selected"]
